--- a/src/BdrsSide/example.html
+++ b/src/BdrsSide/example.html
@@ -1,4 +1,4 @@
-<div class="Brdst(1rem)"></div>
-<div class="Brdsb(2rem)"></div>
-<div class="Brdsstart(3rem)"></div>
-<div class="Brdsend(5rem)"></div>
+<div class="Bdrst(1rem)"></div>
+<div class="Bdrsb(2rem)"></div>
+<div class="Bdrsstart(3rem)"></div>
+<div class="Bdrsend(5rem)"></div>
