--- a/src/Inset/example.html
+++ b/src/Inset/example.html
@@ -1,3 +1,3 @@
 <div class="Inset(0)"></div>
-<div class="InsetX(0)"></div>
-<div class="InsetY(0)"></div>
+<div class="Insetx(0)"></div>
+<div class="Insety(0)"></div>
